@@ -6,6 +6,7 @@ PHP                                                                        NEWS
 - Added stream filter support to mcrypt extension (ported from 
   mcrypt_filter). (Stas)
 
+- Fixed bug #51237 (milter SAPI crash on startup). (igmar at palsenberg dot com)
 - Fixed bug #51213 (pdo_mssql is trimming value of the money column). (Ilia, 
   alexr at oplot dot com)
 - Fixed bug #51190 (ftp_put() returns false when transfer was successful).  
